kubernetes/main/apps/networking/gateway/envoy/manifests/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: networking
  annotations:
    external-dns.kubernetes.io/target: &host external.garb.dev
  labels:
    type: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.40.22
  infrastructure:
    annotations:
      # when using gateway-apis in cilium it also creates a service
      # with a different name and tries to take this IP.
      # the problem is the service created by cilium is not the one used by envoy.
      # therefore, the service is disabled
      external-dns.kubernetes.io/hostname: *host
      # lbipam.cilium.io/ips: 192.168.40.22
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  namespace: networking
  annotations:
    external-dns.kubernetes.io/target: &host internal.garb.dev
  labels:
    type: internal
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.40.23
  infrastructure:
    annotations:
      # lbipam.cilium.io/ips: 192.168.40.23
      external-dns.kubernetes.io/hostname: *host
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external-l4
  namespace: networking
  annotations:
    external-dns.kubernetes.io/target: ipv4.garb.dev
  labels:
    type: external
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.40.21
  infrastructure:
    # annotations:
    #external-dns.kubernetes.io/hostname: external-l4.garb.dev
    # lbipam.cilium.io/ips: 192.168.40.21
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-l4-config
  listeners:
    - name: tcp
      protocol: TCP
      port: 10000
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: udp
      protocol: UDP
      port: 10001
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: UDPRoute
